--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -39,32 +39,32 @@
                           <h4 class="modal-title">Θεματικές</h4>
                         </div>
                         <div class="modal-body small">
-                          <h2>1. ΕΞΥΠΝΕΣ ΠΙΝΑΚΙΔΕΣ</h2>
+                          <h2>1. Έξυπνες πινακίδες</h2>
                           <p>H χρήση των οδικών σημάτων είναι εκτενής τόσο εντός πόλεων όσο και σε μεγάλους δρόμους ταχείας κυκλοφορίας. Η παρουσία τους προωθεί την
                           συμμόρφωση των οδηγών προς τον κώδικα οδικής κυκλοφορίας, εξυπηρετώντας έτσι τις ανάγκες της οδικής αρχής.
                           Παρουσιάζεται, με την χρήση της τεχνολογίας του Internet of Things, η δυνατότητα μετατροπής των απλών πινακίδων σε πηγές άμεσης πληροφόρησης για τους
                           οδηγούς για ζητήματα που αφορούν στην οδική ασφάλεια και συμπεριφορά σε πραγματικό χρόνο, όπως επικίνδυνες καιρικές συνθήκες, ατυχήματα που έχουν
                           συμβεί, διέλευση οχημάτων έκτακτης ανάγκης κ.α. Το ζητούμενο είναι λοιπόν η ανεύρεση καινοτόμων λύσεων και εφαρμογών οι οποίες, αξιοποιώντας τις ήδη
                           υπάρχουσες υποδομές ή διευρύνοντάς τες, θα μπορούσαν να αποβούν σωτήριες για τους οδηγούς στους ελληνικούς δρόμους.</p>
-                          <h2>2. ΕΞΥΠΝΟ ΠΑΡΚΙΝΓΚ</h2>
+                          <h2>2. Έξυπνο πάρκινγκ</h2>
                           <p>Η παράνομη στάθμευση και η εν γένει έλλειψη χώρων στάθμευσης αποτελούν χρόνια προβλήματα για τους πολίτες και τους δήμους. Τα προβλήματα συνίστανται
                           μεταξύ άλλων στην έλλειψη γνώσης για τους ελεύθερους χώρους στάθμευσης από την πλευρά των πολιτών και στην αδυναμία επιτήρησης των θέσεων από την
                           εκάστοτε δημοτική αρχή. Αυτό προκαλεί αντίστοιχα αύξηση των σημείων συμφόρησης στο οδικό δίκτυο, απώλεια χρόνου και απώλεια εσόδων. Επομένως
                           οποιαδήποτε τεχνολογική λύση οφείλει να αντιμετωπίσει και τα δύο μέτωπα ταυτόχρονα: να παρέχει πληροφόρηση για την διαθεσιμότητα των κενών θέσεων
                           στους οδηγούς ενώ παράλληλα να παρέχει στην δημοτική αρχή ένα χρήσιμο εργαλείο για την συλλογή των τελών στάθμευσης και την έκδοση προστίμων εξ αποστάσεως.</p>
-                          <h2>3. ΕΞΥΠΝΗ ΔΙΑΧΕΙΡΙΣΗ ΤΗΣ ΚΥΚΛΟΦΟΡΙΑΣ</h2>
+                          <h2>3. Έξυπνη διαχείριση της κυκλοφορίας</h2>
                           <p>Οι παραβιάσεις του Κ.Ο.Κ. αποτελούν σήμερα το πιο σημαντικό πρόβλημα για την οδική ασφάλεια καθώς είναι η κύρια αιτία πρόκλησης τροχαίων ατυχημάτων. Η
                           ποικιλομορφία των παραβάσεων, από τις παραβιάσεις φωτεινού σηματοδότη και οδικών σημάτων μέχρι και την παράνομη στάθμευση σε λεοφωρειολωρίδα ή την
                           διπλή στάθμευση, συμβάλλει στην αυξημένη κίνηση στους δρόμους, στον εκνευρισμό των οδηγών καθώς και στην πρόκληση ατυχημάτων με μεγάλο υλικό
                           κόστος ή κόστος για την ανθρώπινη ζωή. Επιδιώκεται εν τέλει η ανεύρεση τεχνολογικών λύσεων για την παρακολούθηση τέτοιων παραβιάσεων, την άμεση
                           διευθέτησή τους και την εν γένει επιτήρηση.</p>
-                          <h2>4. ΕΞΥΠΝΗ ΚΙΝΗΤΙΚΟΤΗΤΑ</h2>
+                          <h2>4. Έξυπνη κινητικότητα</h2>
                           <p>Ο σχεδιασμός των οδικών συγκοινωνιών είναι μια πολύπλοκη διαδικασία που είναι δύσκολο να αλλάξει και να προσαρμοστεί σε συνθήκες που προκύπτουν καθώς
                           στηρίζεται σε εικασίες. Η αστική ανάπτυξη δεν μπορεί να προβλεφθεί με ακρίβεια με αποτέλεσμα να υπάρχει αύξηση της κυκλοφοριακής συμφόρησης σε σημεία του
                           οδικού δικτύου που δεν είχαν συμπεριληφθεί στον αρχικό σχεδιασμό και ανεπαρκής κάλυψη των δημοσίων συγκοινωνιών. Είναι επιτακτική λοιπόν η παροχή
                           λύσεων και στα τρία στάδια του σχεδιασμού: Στην συλλογή των αρχικών δεδομένων και στατιστικών της κυκλοφορίας, στον ακριβή προσδιορισμό των
                           αναγκών αυτής και στην προσομοίωση πολλαπλών σεναρίων των αποτελεσμάτων του εκάστοτε έργου έτσι ώστε να υπάρχει κάλυψη για μελλοντικές ανάγκες.</p>
-                          <h2>5. ΧΩΡΟΣ ΕΙΚΟΝΙΚΗΣ ΦΟΡΤΩΣΗΣ</h2>
+                          <h2>5. Χώρος εικονικής φόρτωσης</h2>
                           <p>Ένα σοβαρό ζήτημα που καλούνται να αντιμετωπίσουν οι μεταφορικές εταιρίες είναι η ανεύρεση θέσεων φόρτωσης - εκφόρτωσης στο οδικό δίκτυο εντός του
                           αστικού συγκροτήματος. Συχνά τα οχήματα αναγκάζονται να σταθμεύουν σε δρόμους που είναι πολυσύχναστοι, παρακωλύοντας την κυκλοφορία, ή να
                           σπαταλούν πολύ χρόνο για ανεύρεση θέσης στάθμευσης. Λύση στο πρόβλημα αυτό μπορεί να δώσει μια εφαρμογή που θα δίνει στα επαγγελματικά οχήματα τη
@@ -72,7 +72,7 @@
                           είναι περιορισμένος για τη στάθμευση των οχημάτων. Επίσης, με τη χρήση της συγκεκριμένης εφαρμογής υπάρχει η δυνατότητα επέκτασης του χρόνου
                           φορτοεκφόρτωσης (Virtual Loading Extension) σε περιοχές στις οποίες παρόλο που επιτρέπεται η φορτοεκφόρτωση ο χρόνος για να πραγματοποιηθεί είναι αρκετά
                           περιορισμένος.</p>
-                          <h2>6. ΣΥΝΕΡΓΑΤΙΚΑ ΕΞΥΠΝΑ ΣΥΣΤΗΜΑΤΑ</h2>
+                          <h2>6. Συνεργατικά έξυπνα συστήματα</h2>
                           <p>Η κυκλοφοριακή συμφόρηση είναι το κυριότερο πρόβλημα των μεγάλων αστικών κέντρων του σήμερα. Παρά τις προσπάθειες που γίνονται από τους αρμόδιους
                           φορείς οι επιπτώσεις στην καθημερινότητα των πολιτών παραμένουν ισχυρές. Θετική επίδραση προς αυτή την κατεύθυνση μπορεί να έχει η δημιουργία
                           εφαρμογών που χρησιμοποιούν συστήματα ITS. Τα ΙTS είναι συστήματα τα οποία επιτρέπουν στο όχημα να επικοινωνεί ασύρματα με άλλο όχημα ή με μια υποδομή.
@@ -80,7 +80,7 @@
                           οδικά δίκτυα και η μείωση των ρυπογόνων εκπομπών. Τα οχήματα και η υποδομή που είναι εφοδιασμένα με ITS μπορούν, για παράδειγμα, να διαβιβάσουν μια
                           προειδοποίηση ο ένας στον άλλο, μετά από την οποία οι οδηγοί ενημερώνονται έγκαιρα για την επικείμενη κυκλοφοριακή κατάσταση ώστε να λάβουν τις
                           απαραίτητες ενέργειες για να αποφευχθούν πιθανές βλάβες.</p>
-                          <h2>7. ΣΥΓΧΡΟΝΟΙ ΚΟΜΒΟΙ ΜΕΤΕΠΙΒΙΒΑΣΗΣ</h2>
+                          <h2>7. Σύγχρονοι κόμβοι μετεπιβίβασης</h2>
                           <p>Τα μεγάλα αστικά κέντρα καλούνται όλο και πιο συχνά να ενσωματώσουν περισσότερα μέσα μαζικής μεταφοράς στο δίκτυο μετακινήσεων των κατοίκων
                           τους. Η δημιουργία συγκοινωνιακών κόμβων αποτελεί ένα κρίσιμο τμήμα των δημοσίων συγκοινωνιών, αφού επιτρέπουν στους ταξιδιώτες να διανύουν μακρινές
                           αποστάσεις, καθώς μειώνουν το χρόνο ταξιδιού και βελτιώνουν αισθητά την ποιότητα της παροχής υπηρεσιών. Επίσης, επιτυγχάνουν την ισχυρή συνεργασία
@@ -88,7 +88,7 @@
                           καθώς και την ενσωμάτωση διαφορετικών τρόπων μεταφοράς και απαιτήσεων κινητικότητας με μειωμένο χρόνο μεταφοράς. Αναζητούνται τεχνολογικές λύσεις οι
                           οποίες θα υποστηρίζουν την δημιουργία τέτοιων κόμβων ενσωματώνοντας όσο το δυνατόν περισσότερα μέσα μαζικής μεταφοράς (τραμ, μετρό, τρένο, επιβατηγά
                           πλοία κ.α.)</p>
-                          <h2>8. ΤΕΛΗ ΚΥΚΛΟΦΟΡΙΑΚΗΣ ΣΥΜΦΟΡΗΣΗΣ</h2>
+                          <h2>8. Τέλη κυκλοφοριακής συμφόρησης</h2>
                           <p>Tο ζήτημα της κυκλοφοριακής συμφόρησης στα μεγάλα αστικά κέντρα είναι πολυσύνθετο και δεν συνίσταται μόνο στην έλλειψη υποδομών. Μια συνολική
                           λύση απαιτεί την λήψη επιμέρους μέτρων που θα συμβάλλουν στην αντιμετώπιση του. Η χρέωση για τη συμφόρηση είναι ένα τέλος που χρεώνεται στα περισσότερα
                           αυτοκίνητα που κινούνται σε μια συγκεκριμένη ζώνη φόρτισης, κυρίως στα αστικά κέντρα, για κάποιες ώρες της ημέρας. Αυτή η οικονομική επιβάρυνση στοχεύει στη
@@ -96,7 +96,7 @@
                           παραπάνω επιτυγχάνονται καθώς οι κάτοικοι εξωθούνται να χρησιμοποιούν περισσότερο τα μέσα μαζικής μεταφοράς και τους εναλλακτικούς τρόπους
                           μετακίνησης στα αστικά κέντρα όπως ποδήλατο, περπάτημα. Κρίσιμη είναι η ανάπτυξη εφαρμογών που θα μπορούν να ελέγχουν την κίνηση των οχημάτων
                           εντός των ζωνών αποδίδοντας την χρέωση για την συμφόρηση με ορθό και άμεσο τρόπο.</p>
-                          <h2>9. ΚΟΙΝΣΕΠ ΣΤΟΝ ΤΟΜΕΑ ΤΗΣ ΚΟΙΝΟΧΡΗΣΤΗΣ ΚΙΝΗΤΙΚΟΤΗΤΑΣ</h2>
+                          <h2>9. ΚΟΙΝΣΕΠ στον τομέα της κοινόχρηστης κινητικότητας</h2>
                           <p>Ίδρυση εταιριών με την μορφή των ΚΟΙΝΣΕΠ (Κοινωνικές Συνεταιριστικές Επιχειρήσεις) που θα δραστηριοποιούνται στον τομέα των συστημάτων
                           κοινόχρηστης κινητικότητας (Car Sharing). Οι περιαστικοί Δήμοι της Θεσσαλονίκης αποτελούν ιδανικό πεδίο για την ανάπτυξη συστημάτων κοινόχρηστων
                           αυτοκινήτων που αποτελούν μια βιώσιμη εναλλακτική λύση έναντι στην κλασική ιδιοκτησία αυτοκινήτου. Οι μορφές που μπορούν να πάρουν είναι πολλές, κλαμπ
