--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -230,6 +230,70 @@
                       επίσης είναι συμβεβλημένος STEM Ambassador οργανώντας παρουσιάσεις και λειτουργώντας σαν μέντορας για τον επαγγελματικό προσανατολισμό σε σχολεία και διαγωνισμούς όπως το Go4SET.</p>
                     </div>
                 </div>
+                <div class="weekends-mentor-container">
+                    <div class="col-md-2 weekends-mentor">
+                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/ntempos.jpg">
+                    </div>
+                    <div class="col-md-10">
+                      <h3>Δημήτρης Ντέμπος</h3></br>
+                      <h4>Οικονομολόγος – ICT Project Manager</h4></br>
+                      <a href="#coach-7" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
+                      <p id="coach-7" class="weekends-mentor-bio small collapse">Γεννημένος στην Ελλάδα στα μέσα της δεκαετίας του '80 ο Δημήτρης μεγάλωσε στα χρόνια της ευημερίας. Σπούδασε οικονομικά στο ΑΠΘ και, ευτυχώς, αποφοίτησε ακριβώς πάνω στην έκρηξη της φούσκας. Η τοπική αγορά ήταν κατεστραμένη και τίποτα δεν μπορούσε να τροφοδοτήσει την δημιουργική του ανησυχία. Ήταν λοιπόν η ώρα για έξοδο στην παγκόσμια αγορά, αλλά πώς; Η τεχνολογία ήταν ο μόνος τρόπος, έτσι αποφάσισε να παρακολουθήσει ένα MSc στη Πληροφορική & Διοίκηση στο τμήμα Πληροφορικής του ΑΠΘ. Κατά τη διάρκεια αυτού, βοήθησε στην συγγραφή ενός βιβλίου, με θέμα τους αλγορίθμους συστάσεων με βάση την τοποθεσία, που εκδόθηκε από την Springer και κέρδισε τον μεγαλύτερο επιχειρηματικό φοιτητικό διαγωνισμό στην Ελλάδα και την Κύπρο. Αν και επρόκειτο να αποχωρήσει από το τμήμα, οι καθηγητές του αποφάσισαν να του δώσουν το δίπλωμα ενώ είχε πάει να παρακολουθήσει την αποφοίτηση των συμφοιτητών του, φορώντας μπλουζάκι, βερμούδα και σαγιονάρες. Αμέσως μετά είχε μια αποτυχημένη επιχειρηματική προσπάθεια στον τομέα του hardware και της ανακύκλωσης ενώ αργότερα εργάστηκε ως συγγραφέας επιχειρηματικού σχεδίου, οικονομικός αναλυτής, διαχειριστής καμπάνιας Kickstarter, σύμβουλος μάρκετινγκ και προγραμματιστής front-end. Επιπλέον, έχει δημιουργήσει αρκετά τεχνολογικά events, bootcamps και hackathons για να βοηθήσει την τοπική κοινότητα να αναπτυχθεί. Αυτή την περίοδο, εκτός από community manager στο OK!Thess, είναι μέλος της συμβουλευτικής επιτροπής του SXSW accelerator, δημιουργικός σύμβουλος επιχειρηματικότητας για το Goethe Institut και συνδιοργανωτής του DEVit Conference, του μεγαλύτερου συνεδρίου ανάπτυξης λογισμικού στην Ελλάδα. Στον ελεύθερο χρόνο του, παίζει μπάσκετ σε ημιεπαγγελματικό επίπεδο και απολαμβάνει να ταξιδεύει.</p>
+                    </div>
+                </div>
+                <div class="weekends-mentor-container">
+                    <div class="col-md-2 weekends-mentor">
+                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/ntsoniotis.jpg">
+                    </div>
+                    <div class="col-md-10">
+                      <h3>Νικόλαος Τσονιώτης</h3></br>
+                      <h4>Product Innovation Manager</h4></br>
+                      <a href="#coach-8" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
+                      <p id="coach-8" class="weekends-mentor-bio small collapse">Ο κ. Τσονιώτης κατέχει Δίπλωμα Ηλεκτρονικού Μηχανικού και Μηχανικού Υπολογιστών από το Πανεπιστήμιο του Χαλλ, Ην.Βασίλειο. Έχει εργαστεί ως μηχανικός R&D στον κλάδο των τηλεπικοινωνιών για πάνω από δέκα έτη. Επί του παρόντος δραστηριοποιείται ως Product Innovation Manager στο Ινστιτούτο Πληροφορικής και Τηλεπικοινωνιών του ΕΚΕΤΑ, όπου επικεντρώνεται στη διαχείριση προϊόντων και την εμπορευματοποίηση της καινοτομίας. Τα ενδιαφέροντά του συμπεριλαμβάνουν τεχνολογίες όπως  big data, blockchain, Α.Ι., και πως αυτές μπορούν να εφαρμοστούν σε κλάδους όπως Ενέργεια, Υγεία, Έξυπνη Κινητικότητα/Πόλεις, Εφοδιαστική Αλυσίδα και άλλους. Παράλληλα ανέπτυξε επιχειρηματική δράση (startups) στον κλάδο της πληροφορικής, αυτοματισμών και ενέργειας. Στα πλαίσια συμμετοχής του στο γενικότερο οικοσύστημα καινοτόμου επιχειρηματικότητας έχει διοργανώσει σχετικές δράσεις και συνέδρια ενώ απασχολείται ως “startup coach in residence” στην θερμοκοιτίδα του OK!Thess στη Θεσσαλονίκη.</p>
+                    </div>
+                </div>
+                <div class="weekends-mentor-container">
+                    <div class="col-md-2 weekends-mentor">
+                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/egantina.jpg">
+                    </div>
+                    <div class="col-md-10">
+                      <h3>Εβίτα Γκαντίνα</h3></br>
+                      <h4>Corporate Communication & Market Research Director - For Communication LtD</h4></br>
+                      <a href="#coach-9" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
+                      <p id="coach-9" class="weekends-mentor-bio small collapse">Η Εβίτα Γκαντίνα γεννήθηκε στη Θεσσαλονίκη και έχει πάνω από είκοσι πέντε χρόνια εμπειρίας
+                      σε ανώτερες θέσεις σε ελληνικές και διεθνείς εταιρείες. Είναι κάτοχος μεταπτυχιακού τίτλου
+                      στην Επιχειρησιακή Επικοινωνία και Δημόσιες Σχέσεις και Bachelor of Business Administration
+                      από το University of Houston. Για αρκετά χρόνια ήταν μέλος των Διοικητικών Συμβουλίων ή διοικητικό στέλεχος εταιρειών
+                      στον τομέα της κλωστοϋφαντουργίας. Από το 2001 διδάσκει σε κολέγια ενώ από το 2011 είναι
+                      εταίρος στην &quot;For Communication&quot;, εταιρεία μάρκετινγκ και δημοσίων σχέσεων, παράλληλα
+                      συνεχίζει να διδάσκει σε προπτυχιακά και μεταπτυχιακά προγράμματα. Είναι ομιλήτρια και
+                      μέντορας στο Venture Garden του ACT, μέλος της Διοικούσας Επιτροπής της Ελληνικής
+                      Εταιρίας Διοίκησης Επιχηρήσεων (ΕΕΔΕ Μακεδονίας) και πρόεδρος του Τομέα Ανάπτυξης
+                      Γυναικών Επιχειρηματιών &amp; Μάνατζερς (ΤΟΓΜΕ Μακεδονίας).</p>
+                    </div>
+                </div>
+                <div class="weekends-mentor-container">
+                    <div class="col-md-2 weekends-mentor">
+                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/gzografaki.jpg">
+                    </div>
+                    <div class="col-md-10">
+                      <h3>Γιώτα Ζωγραφάκη</h3></br>
+                      <h4>Καθηγήτρια Marketing, Αμερικάνικo Κολλέγιο ACT</h4></br>
+                      <a href="#coach-10" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
+                      <p id="coach-10" class="weekends-mentor-bio small collapse">Η Γιώτα Ζωγραφάκη ολοκλήρωσε τις σπουδές της στο Οικονομικό Τμήμα του Αριστοτελείου
+                      Πανεπιστημίου Θεσσαλονίκης και έλαβε το μεταπτυχιακό της τίτλο σε Information Management
+                      από το Πανεπιστήμιο Lancaster στο Ηνωμένο Βασίλειο. Διαθέτει ευρεία επαγγελματική εμπειρία
+                      σε καταναλωτικά αγαθά και υπηρεσίες, κατέχοντας διευθυντικές θέσεις σε πολυεθνικές &amp; ελληνικές
+                      εταιρείες (Procter &amp; Gamble, ORAMADIRECT), αλλά και στον μη κερδοσκοπικό τομέα
+                      (Αρκτούρος). Έχει δώσει πολλές ομιλίες και σεμινάρια για το marketing, την επιχειρηματικότητα και
+                      τη δημόσια ομιλία (public speaking). Έχει διδάξει μαθήματα Marketing, Επικοινωνίας και Business
+                      σε προπτυχιακό και μεταπτυχιακό επίπεδο και έχει λάβει βραβείο για Excellence in Teaching.
+                      Σήμερα διδάσκει στο Business School του Αμερικάνικου Κολλέγιου ACT και είναι εκπαιδευτής και
+                      μέντορας στην κοιτίδα νεοφυούς επιχειρηματικότητας Venture Garden του THI (The Hellenic
+                      Initiative). Επιπλέον είναι μέλος της κριτικής επιτροπής του διαγωνισμού επιχειρηματικότητας John
+                      and Mary Pappajohn Business Plan Awards. Μιλά Αγγλικά, Γερμανικά και Ιταλικά.</p>
+                    </div>
+                </div>
               </div>
               <div id="schedule">
               </br>
