--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -21,16 +21,28 @@
             </div>
             <div class="col-md-9">
               <h1>Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές</h1>
-                <div class="weekends-subtitle">28 - 30 Σεπτεμβρίου 2018</div>
+                <div class="weekends-subtitle">28 - 30 Σεπτεμβρίου 2018, OK!Thess</div>
                 <div id="overview">
                 </br>
-                    <p><strong>Έχεις μια ιδέα σχετικά με τις βιώσιμες αστικές μεταφορές και θέλεις να την προωθήσεις, ένα πρόβλημα που θέλεις να λύσεις αλλά δεν ξέρεις από πού να ξεκινήσεις;</strong></p>
+                    <p><strong>Έχεις μια ιδέα σχετικά με τις βιώσιμες αστικές μεταφορές; Σχεδίασε και παρουσίασε την· συνεργάσου με την ομάδα σου και κέρδισε το βραβείο!</strong></p>
                     <p>Το Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές (ΣΚΑΜ) είναι το μέρος για να αναζητήσεις ομάδα, να δημιουργήσεις το πρωτότυπο, να επικυρώσεις την βιωσιμότητα της ιδέας σου και να ακούσεις συμβουλές από έμπειρους ανθρώπους που προέρχονται από το χώρο των μεταφορών και των επιχειρήσεων.</p></br>
 
-                    <h3>Τι πρέπει να φέρεις</h3>
-                    <p>Πολλή ενέργεια! Αρχικά θα παρουσιάσεις την ιδέα σου και θα ακούσεις άλλους να παρουσιάζουν, κατόπιν θα ψηφίσεις τις πιο ενδιαφέρουσες ιδέες και θα δημιουργήσεις ομάδα. Μπορείς να έρθεις με φίλους σου, αλλά καλύτερα να συμμετέχετε σε ξεχωριστές ομάδες.</p>
+                    <h3>Πως ξεκινάμε;</h3>
+                    <ul>
+                      <li>Αρχικά θα παρουσιάσεις τον εαυτό σου και την ιδέα σου</li>
+                      <li>Έπειτα θα δεις τις υπόλοιπες παρουσιάσεις</li>
+                      <li>Κατόπιν θα ψηφίσεις τις δύο πιο ενδιαφέρουσες ιδέες</li>
+                      <li>Τέλος με βάση τις ψήφους σου θα δημιουργηθούν οι ομάδες</li>
+                    </ul>
 
-                    <p>Το πρόβλημα που θέτεις προς επίλυση πρέπει να καλύπτει θέματα σχετικά με τις αστικές μεταφορές και την χρήση νέων τεχνολογιών. Μπορείς να δεις αναλυτικά τις θεματικές <a data-toggle="modal" href="#subjects">εδώ</a>. Κατά τη διάρκεια του Σαββατοκύριακου, θα κληθείς να δημιουργήσεις ένα πρωτότυπο - δηλαδή ένα ελάχιστο βιώσιμο προϊόν - που θα ταιριάζει στις ανάγκες του πελάτη-στόχου σου. Θα έχεις καθοδήγηση κα συμβουλές, θα επαναπροσδιορίσεις την ιδέα σου και πιθανόν να διαμορφώσεις μια εξ ολοκλήρου νέα προσέγγισή</p>
+                    <p><small>*Μπορείς να έρθεις με φίλους σου, αλλά καλύτερα να συμμετέχετε σε ξεχωριστές ομάδες.</small></p></br>
+
+                    <h3 id="subject"><a data-toggle="modal" href="#subjects">Θεματικές <span class="glyphicon glyphicon-chevron-right"></span></a></h3>
+
+                    <p>Το πρόβλημα που θέτεις προς επίλυση πρέπει να καλύπτει θέματα σχετικά με τις αστικές μεταφορές και την χρήση νέων τεχνολογιών. Μπορείς να δεις αναλυτικά τις θεματικές <a data-toggle="modal" href="#subjects">εδώ</a>.</p>
+                    </br>
+
+                    <p>Κατά τη διάρκεια του Σαββατοκύριακου, θα κληθείς να δημιουργήσεις ένα πρωτότυπο - δηλαδή ένα ελάχιστο βιώσιμο προϊόν που θα αναπαριστά τον τρόπο με τον οποίο δουλεύει η λύση που προτείνεις - που θα ταιριάζει στις ανάγκες του πελάτη-στόχου σου. Θα έχεις καθοδήγηση και συμβουλές, θα επαναπροσδιορίσεις την ιδέα σου και πιθανόν να διαμορφώσεις μια εξ ολοκλήρου νέα προσέγγιση.</p></br>
                     <div id="subjects" class="modal fade" role="dialog">
                       <div class="modal-dialog">
                       <div class="modal-content">
@@ -122,7 +134,7 @@
                 <br>
               <div id="mentors">
                <h2>Μέντορες</h2>
-                 <div class="weekends-mentor-container">
+                <div class="weekends-mentor-container">
                     <div class="col-md-2 weekends-mentor">
                      <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/jmsalanova.jpg">
                     </div>
@@ -425,7 +437,7 @@
                 </br>
                 <h3>Κριτήρια αξιολόγησης</h3>
                 </br>
-                 <p>Οι προτάσεις – ιδέες θεματικά πρέπει να ανήκουν στον τομέα των καινοτόμων αστικών μεταφορών προσώπων και αγαθών. Η συγκεκριμένη απαίτηση δεν βαθμολογείται αλλά θα λειτουργήσει σαν προϋπόθεση για να αξιολογηθεί μια πρόταση - ιδέα.</p>
+                 <p>Οι προτάσεις – ιδέες θεματικά πρέπει να ανήκουν στον τομέα των καινοτόμων αστικών μεταφορών προσώπων και αγαθών. Η συγκεκριμένη απαίτηση δεν βαθμολογείται αλλά θα λειτουργήσει σαν προϋπόθεση για να αξιολογηθεί μια πρόταση - ιδέα. </p>
                     <ul>
                         <li><strong>Εφικτότητα</strong> (Feasibility):<small> Η πρόταση – ιδέα θα πρέπει να είναι εφαρμόσιμη λαμβάνοντας υπόψη τεχνολογικούς και νομικούς περιορισμούς.</small></li>
                         <li><strong>Περιβαλλοντική Βιωσιμότητα</strong> (Sustainability):<small> Η πρόταση – ιδέα θα πρέπει να έχει θετικό ή ουδέτερο περιβαλλοντικό αποτύπωμα σε όλο το κύκλο ζωής της.</small></li>
