commit final touches

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -24,7 +24,7 @@
                 <div class="weekends-subtitle">28 - 30 Σεπτεμβρίου 2018, OK!Thess</div>
                 <div id="overview">
                 </br>
-                    <p><strong>Έχεις μια ιδέα σχετικά με τις βιώσιμες αστικές μεταφορές; Σχεδίασε και παρουσίασε την· συνεργάσου με την ομάδα σου και κέρδισε το βραβείο!</strong></p>
+                    <p><strong>Έχεις μια ιδέα σχετικά με τις βιώσιμες αστικές μεταφορές που θέλεις να κάνεις επιχείρηση; Σχεδίασε και παρουσίασε την· συνεργάσου με την ομάδα σου και κέρδισε το βραβείο!</strong></p>
                     <p>Το Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές (ΣΚΑΜ) είναι το μέρος για να αναζητήσεις ομάδα, να δημιουργήσεις το πρωτότυπο, να επικυρώσεις την βιωσιμότητα της ιδέας σου και να ακούσεις συμβουλές από έμπειρους ανθρώπους που προέρχονται από το χώρο των μεταφορών και των επιχειρήσεων.</p></br>
 
                     <h3>Πως ξεκινάμε;</h3>
@@ -349,7 +349,7 @@
                         <div class="weekends-schedule-content">
                             <div class="weekends-schedule-content-item">
                                 <div class="weekends-schedule-content-item-time">10:00πμ</div>
-                                <div class="weekends-schedule-content-item-what">Προσέλευση &amp; πρωϊνό</div>
+                                <div class="weekends-schedule-content-item-what">Προσέλευση</div>
                             </div>
                             <div class="weekends-schedule-content-item">
                                 <div class="weekends-schedule-content-item-time">11:00πμ</div>
@@ -384,7 +384,7 @@
                         <div class="weekends-schedule-content">
                             <div class="weekends-schedule-content-item">
                                 <div class="weekends-schedule-content-item-time">10:00πμ</div>
-                                <div class="weekends-schedule-content-item-what">Προσέλευση &amp; πρωϊνό</div>
+                                <div class="weekends-schedule-content-item-what">Προσέλευση</div>
                             </div>
                             <div class="weekends-schedule-content-item">
                                 <div class="weekends-schedule-content-item-time">11:00πμ</div>
