fix footer content

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -63,7 +63,7 @@
         ga('create', 'UA-49294327-5', 'auto');
         ga('send', 'pageview');
     </script>
-    
+
     <!-- Google Tag Manager -->
     <script>
         (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -191,7 +191,7 @@
                         </a>
                         </div>
                     <div class="col-sm-4">
-												<h5>{% trans 'DONOR' %}</h5><hr>
+												<h5>{% trans 'EXCLUSIVE DONOR' %}</h5><hr>
 												<a href="http://www.snf.org/el/" target="_blank">
 														<img src="{% static '/main/img/footer/isn.jpg' %}" alt="ISN" class="footer-content-item-img">
 												</a>
