--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -175,19 +175,21 @@
                 </div>
                 <div class="weekends-mentor-container">
                     <div class="col-md-2 weekends-mentor">
-                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/chvizmpa.jpg">
+                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/gverginis.jpg">
                     </div>
                     <div class="col-md-10">
-                      <h3>Χρύσα Βίζμπα</h3></br>
-                      <h4>Τοπογράφος Μηχανικός – Συγκοινωνιολόγος</h4></br>
+                      <h3>Ιωάννης Βεργίνης</h3></br>
+                      <h4>Επίτημος πρόξενος του Λουξεμβούργου</h4></br>
                       <a href="#coach-3" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
-                      <p id="coach-3" class="weekends-mentor-bio small collapse">H κα. Χρύσα Βίζμπα είναι Τοπογράφος Μηχανικός – Συγκοινωνιολόγος με εξειδίκευση σε συγκοινωνιακά και περιβαλλοντικά ζητήματα. Οι βασικοί τομείς ενασχόλησής της είναι ο
-                      στρατηγικός σχεδιασμός και η ανάλυση δεδομένων συγκοινωνιακών έργων και συστημάτων μεταφορών. Έχει πτυχίο Αγρονόμου –Τοπογράφου Μηχανικού (2007) και δύο
-                        μεταπτυχιακούς τίτλους σπουδών, στην προστασία περιβάλλοντος και βιώσιμη ανάπτυξη (2008) και στο σχεδιασμό συστημάτων μεταφορών (2009). Εργάστηκε σε εταιρίες
-                        συμβούλων από το 2007 ενώ από το 2010 εργαζόταν στο Συμβούλιο Αστικών Συγκοινωνιών Θεσσαλονίκης (ΣΑΣΘ), νυν Οργανισμός Συγκοινωνιακού Έργου Θεσσαλονίκης (ΟΣΕΘ).
-                        Εξειδικεύεται σε θέματα βιώσιμης αστικής κινητικότητας, σχεδιασμό και εποπτεία δημόσιων συγκοινωνιακών συστημάτων μεταφορών, έξυπνα συστήματα μεταφορών,
-                        έρευνες και ανάλυση δεδομένων, μέσα σταθερής τροχιάς, ποιότητα δημοσίων μεταφορών. Έχει επίσης εργαστεί σε πληθώρα συγχρηματοδοτούμενων και μη εθνικών και ευρωπαϊκών
-                        έργων και προγραμμάτων (EPTA, ECOTALE, ATTAC, SUMPs- Up, SUNRISE, CIVITAS κα).</p>
+                      <p id="coach-3" class="weekends-mentor-bio small collapse">Γεννήθηκε στην Θεσσαλονίκη το 1954. Είναι Πτυχιούχος του Οικονομικού Τμήματος της Σχολής Νομικών και Οικονομικών Επιστημών του Αριστοτελείου Πανεπιστημίου Θεσ/νίκης.
+                        Είναι Επίτιμος Πρόξενος του Μεγάλου Δουκάτου του Λουξεμβούργου, είναι Πρόεδρος του Εμπορικού  Τμήματος του Εμπορικού και Βιομηχανικού Επιμελητηρίου Θεσσαλονίκης και Μέλος του Διοικητικού Συμβουλίου.
+                        Είναι Εντεταλμένος Σύμβουλος της Link Technologies και Υπεύθυνος Ανάπτυξης της εταιρείας Interform Α.Ε.
+                        Είναι μέλος των  Διοικητικών  Συμβουλίων  των εταιρειών Κρίκετ ΑΕ, Αφοί Καλογιάννη ΑΕ, Βιτουμίνα ΑΕ, Thermi Ventures ΑΕ, Darion Ιωάννου ΑΕ.
+                        Διετέλεσε Διευθύνων Σύμβουλος,Αναπληρωτής Πρόεδρος κ Εντεταλμένος Σύμβουλος (1979-2008) της ΜΙNOS ΑΒΕΕ Μακεδονικής Μεταλλουργίας όπου ήταν μέτοχος και μέλος του Διοικητικού Συμβουλίου από το 1979 έως το 2010.
+                        Ήταν Υπεύθυνος Ανάπτυξης Αφρικής της ΑΛΟΥΜΥΛ ΑΕ(2011-2013),Εκκαθαριστής της Ελληνικής Εταιρείας Χάλυβος ΑΕ(2015-2016).
+                        Έχει πολύ μεγάλη εμπειρία και εξειδίκευση στην Ανάπτυξη εταιρειών και στο Εξωτερικό Εμπόριο.
+                        Διετέλεσε Αντιπρόεδρος και Γενικός Γραμματέας και του Συνδέσμου Βιομηχανιών Βορείου Ελλάδος και του Εμπορικού και Βιομηχανικού Επιμελητηρίου Θεσ/νίκης(1995-2011).
+                        Πρώην μέλος του Δ.Σ. της Διεθνούς Εκθέσεως Θεσ/νίκης ΔΕΘ-HELEXPO AE και του Διαβαλκανικού Παραευξείνιου Επιχειρηματικού Κέντρου ΑΕ.</p>
                     </div>
                 </div>
                 <div class="weekends-mentor-container">
@@ -421,7 +423,79 @@
               <div id="judges">
                </br></br>
                <h2>Κριτική επιτροπή</h2>
-               <p>Η πενταμελής κριτική επιτροπή θα αποτελείται από μέλη των οργανισμών που υποστηρίζουν το τριήμερο. Η σύνθεση της επιτροπής θα ανακοινωθεί στο παρόν website πριν την έναρξη του 3ημέρου.</p>
+               <div class="weekends-mentor-container">
+                   <div class="col-md-2 weekends-mentor">
+                    <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/bensasson.png">
+                   </div>
+                   <div class="col-md-10">
+                     <h3>Σίμος Μπενσασσών</h3></br>
+                     <h4>Δημοτικός Σύμβουλος - Επικεφαλής OK!Thess</h4></br>
+                     <a href="#judge-1" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
+                     <p id="judge-1" class="weekends-mentor-bio small collapse">Ο Σίμος Μπενσασσών γεννήθηκε το 1945, έχει πτυχίο αρχιτεκτονικής από
+                        το ΑΠΘ και πληροφορικής από το πανεπιστήμιο του Λονδίνου. Δούλεψε σαν
+                        αρχιτέκτονας μέχρι το 1975, και σαν σύμβουλος στην εφαρμογή της
+                        πληροφορικής στην κατασκευαστική βιομηχανία μέχρι το 1980. Το 1980
+                        ξεκίνησε μια επιχείρηση πληροφορικής, την Bensasson &amp; Chalmers Lid,
+                        στο Cambridge της Αγγλίας και το 1987 μια δεύτερη, την Synthesys
+                        Software Ltd. Το 1990 μπήκε στην Ευρωπαϊκή Επιτροπή στις Βρυξέλλες
+                        όπου διετέλεσε επί κεφαλής της έρευνας στις “Μελλοντικές και
+                        Αναδυόμενες Τεχνολογίες” (FET) και ακολούθως επί κεφαλής των διεθνών
+                        σχέσεων της ΕΕ σε θέματα πληροφορικής και τηλεπικοινωνιών. Το 2006
+                        αποσπάστηκε στο CEDEFOP στην Θεσσαλονίκη. Δίδαξε Ευρωπαϊκή Πολιτική
+                        στο Αμερικανικό Κολλέγιο Θεσσαλονίκης. Το 2014 εξελέγη δημοτικός
+                        σύμβουλος στον Δήμο Θεσσαλονίκης και είναι εντεταλμένος στα θέματα
+                        καινοτομίας. Υπό την ιδιότητα αυτή, δημιούργησε το «OK!Thess» - μια
+                        προσπάθεια με επικεφαλής τoν Δήμο Θεσσαλονίκης σε συνεργασία με
+                        δημόσιους και ιδιωτικούς φορείς της πόλης που έχει ως σκοπό την ανάπτυξη
+                        ενός ευρύτερου οικοσυστήματος καινοτομίας.</p>
+                   </div>
+               </div>
+               <div class="weekends-mentor-container">
+                   <div class="col-md-2 weekends-mentor">
+                    <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/jdamianos.jpg">
+                   </div>
+                   <div class="col-md-10">
+                     <h3>Ιωάννης Δαμιανός</h3></br>
+                     <h4>CEO Link Technologies</h4></br>
+                     <a href="#judge-2" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
+                     <p id="judge-2" class="weekends-mentor-bio small collapse">Ο Ιωάννης Δαμιανός είναι κάτοχος πτυχίου ηλεκτρολόγου μηχανικού από το πανεπιστήμιο New York Institute of Technology.
+                      Διαθέτει μεταπτυχιακό τίτλο στο πεδίο Computer Management από το πανεπιστήμιο Stevens Institute of Technology(USA) και είναι κάτοχος διδακτορικού τίτλου στον τομέα Computer Design από το πανεπιστήμιο Southampton University(UK).
+                      Εργάστηκε ως manufacturing engineer και Machine technology manager στην εταιρία IBM. Έχει εργασθεί ως Senior Engineering manager στο Ηνωμένο Βασίλειο και ως regional manager Βορείου Ελλάδος στην εταιρία Digital Equipment co. Το 1993 - 2002 είχε την θέση του managing director στην εταιρία Link Systems S.A.
+                      Από το 2002 έως σήμερα είναι πρόεδρος και διευθύνων σύμβουλος της εταιρίας Link Technologies S.A. Έχει πολλαπλές δημοσιεύσεις σε επιστημονικά περιοδικά και έχει πραγματοποιήσει παρουσιάσεις σε διεθνή συνέδρια.
+                      Έχει βραβευθεί με το Design Award for storage unit και με Manufacturing Award for 3270 VDu series.
+                      Μιλάει άπταιστα Αγγλικά και Ελληνικά.</p>
+                   </div>
+               </div>
+               <div class="weekends-mentor-container">
+                   <div class="col-md-2 weekends-mentor">
+                    <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/itsionas.jpg">
+                   </div>
+                   <div class="col-md-10">
+                     <h3>Ιωάννης Τσιώνας</h3></br>
+                     <h4>Διευθύνων Σύμβουλος ΟΣΕΘ</h4></br>
+                     <a href="#judge-3" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
+                     <p id="judge-3" class="weekends-mentor-bio small collapse">Ο Ιωάννης Τσιωνάς είναι διπλωματούχος Τοπογράφος Μηχανικός του Αριστοτελείου
+                      Πανεπιστημίου Θεσσαλονίκης (1993) με εξειδίκευση στα Γεωγραφικά Πληροφοριακά
+                      Συστήματα (GIS) στον πολεοδομικό και χωροταξικό σχεδιασμό και την αστική ανάπτυξη.
+                      Είναι κάτοχος μεταπτυχιακών τίτλων στη Διοίκηση Επιχειρήσεων – MBA (1997) του
+                      Πανεπιστημίου Μακεδονίας, στην Εκπαίδευση Ενηλίκων (2009) και στα Πληροφοριακά
+                      Συστήματα (2013) του Ελληνικού Ανοικτού Πανεπιστημίου. Οι επιστημονικές δημοσιεύσεις
+                      και έρευνες στις οποίες μετείχε επικεντρώνονται στην ανάπτυξη, διαχείριση και εφαρμογή
+                      των πληροφοριακών συστημάτων (GIS) σε μια πληθώρα αντικειμένων που σχετίζονται με
+                      τον αστικό σχεδιασμό, όπως είναι οι περιβαλλοντικές και κλιματικές επιπτώσεις, η σεισμική
+                      δραστηριότητα, ο συγκοινωνιακός σχεδιασμός, αλλά και η ψηφιακή χαρτογράφηση
+                      πολιτισμικών μνημείων. Υπήρξε μέλος της οργανωτικής επιτροπής της Διεθνούς Ένωσης
+                      Τοπογράφων Μηχανικών, Σύμβουλος στο Υπουργείο Μεταφορών και Τηλεπικοινωνιών σε
+                      θέματα Γεωγραφικών Πληροφοριακών Συστημάτων και Διαχειριστής Γεωγραφικού
+                      Συστήματος Πληροφοριών του Δήμου Καλαμαριάς, όπου εργάστηκε επί σειρά ετών ως
+                      αναλυτής GIS, αναλαμβάνοντας τις διευθύνσεις αστικού σχεδιασμού και κτηματολογικής
+                      υπηρεσίας. Έχει διδάξει ως εργαστηριακός Συνεργάτης στα ΑΤΕΙ Σερρών και Κοζάνης,
+                      ενώ υπήρξε εκπαιδευτής ενηλίκων σε ινστιτούτα και φορείς εκπαίδευσης, όπως το Εθνικό
+                      Κέντρο Δημόσιας Διοίκησης. Από τον Οκτώβριο του 2017 έως και σήμερα είναι Διευθύνων
+                      Σύμβουλος στον Οργανισμό Συγκοινωνιακού Έργου Θεσσαλονίκης, που έχει αναλάβει τον
+                      σχεδιασμό και την εποπτεία των συγκοινωνιών στην Περιφερειακή Ενότητα Θεσσαλονίκης.</p>
+                   </div>
+               </div>
               </div>
               <div id="prizes">
                </br>
