disable https redirect

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -45,14 +45,14 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;subset=greek" rel="stylesheet">
 
     {% if not debug %}
-    <script>
+    <!-- <script>
         if (document.location.host.substring(0,3) === 'www') {
             document.location.href = 'https://okthess.gr/'
         }
         if (document.location.protocol === 'http:') {
             document.location.href = 'https://okthess.gr' + document.location.pathname;
         }
-    </script>
+    </script> -->
     {% endif %}
 
 	<script>
